# fan_backend

./: .env.example  .gitignore  pyproject.toml
authenticator/: urls.py  views.py
main/: settings.py  urls.py
